test/tests/stages/18_structures/invalid_types/extra_credit/union_type_declarations/incomplete_union_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  struct
  identifier(s)
  ;
  union
  identifier(u)
  {
  struct
  identifier(s)
  identifier(bad_struct)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
